--- a/app/custom_tailwind.css
+++ b/app/custom_tailwind.css
@@ -3,7 +3,7 @@
     content: "";
     height: 2px;
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    @apply w-0 bg-blue-700 left-1/2 block bottom-0 absolute;
+    @apply w-0 bg-blue-600 left-1/2 block bottom-0 absolute;
   }
   .animation-active:after {
     @apply left-0 w-full;
@@ -31,7 +31,7 @@
   left: var(--left);
   width: 35px;
   height: 7px;
-  background: #6f00ff;
+  background: #760dff;
   animation: dominos 1s ease infinite;
   box-shadow: 2px 2px 3px 0px black;
 }
